# Software-Distribution-website

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial_platform.py  0002_admin_2fa_columns.py
backend/app/: main.py  schemas.py  seed.py  worker.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  auth.py  customer.py  desktop.py  downloads.py  health.py  payments.py  public.py  support.py
backend/app/core/: config.py  deps.py  rate_limit.py  security.py  signing.py  storage.py  totp.py
backend/app/db/: models.py
backend/app/services/: abuse.py  email.py  events.py  invoices.py  licensing.py  payment_providers.py  payments.py  scanning.py  updates.py
backend/tests/: conftest.py  factories.py  test_core_flows.py  test_security_and_licensing.py
docs/: api.md  architecture.md  backup-recovery.md  completion-pass.md  desktop-integration.md  licensing.md  local-development.md  payments.md  production-deployment.md  roadmap.md  setup.md  strict-completion-pass.md
frontend/: .dockerignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/changelog/: page.tsx
frontend/app/contact/: page.tsx
frontend/components/: auth-forms.tsx  auth-links.tsx  dashboard-shell.tsx  operations.tsx  resource-table.tsx  ui.tsx
frontend/lib/: api.ts
frontend/scripts/: qa-api-check.js  qa-browser-check.js
(+26 files in other folders)
