[project]
name = "software-distribution-backend"
version = "0.1.0"
description = "FastAPI backend for a production software distribution and licensing platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "boto3>=1.34.0",
  "celery[redis]>=5.4.0",
  "cryptography>=42.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.8.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.31",
  "structlog>=24.2.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
